--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <!-- <script src="js/underscore.min.js"></script> -->
-
+<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 
 </head>
 <body>
 
 <div class="container">
 <div class="row">
-	<div class="col-md-6">
-	<h1>Republicans go to public colleges more than Democrats</h1>
+	<div class="col-md-6 col-md-offset-3">
+	<h1>Where Your Senators Went to College</h1>
 	<h2>Jay Mahabal</h2>
 	</div>
 </div>
 <div class="row">
-	<div class="col-md-6">
-		Te Secretary of Education Nominations recently concluded with a historic vote: Vice President Mike Pence broke the tie to appoint Betsy DeVos. There has been a huge whirlwind of controversy, with constituents calling in, etc. etc. Even without this context, the general media narrative has been that Republicans do not care for public education, and that Democrats do. 
+	<div class="col-md-6 col-md-offset-3">
+		Donald Trump's Secretary of Education nominations concluded with a historic vote: Vice President Mike Pence had to break a tie in the Senate to appoint Betsy DeVos. This had been a huge whirlwind of controversy, with constituents calling in record numbers to express their displeasure in DeVos' lack of experience, donations to politicians, and stances on a number of education issues. Even without this context, the media narrative for the last few years has been that Republican Party does not care for public education, and that Democrats do. 
 	</div>
 </div>
 <div class="row">
-	<div class="col-md-6">
-		This is probably accurate, to the extent that it applies to Republicans not caring to fund higher education. However, this should be surprising, because more Republican senators attended public universtities for their Bachelors than Democrats, as a percetnage of their respective groups.  
+	<div class="col-md-6 col-md-offset-3">
+		This is probably more or less accurate, to the extent that it applies to funding higher education. However, this should actually be surprising, because more Republican senators attended public universtities for their Bachelors Degrees than Democrats, as a percentage of their respective groups.   
 	</div>
 </div>
 <div class="row">
@@ -46,10 +46,23 @@
 		<div id="chart"></div>
 	</div>
 </div>
-	
+
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		This apparent contradiction may be explained in part by % white.
+		<button id="turntomap">Hihhiii</button>   
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-10 col-md-offset-1">
+		<div id="map"></div>
+	</div>
+</div>
 
 <script src='d3v4.js'></script>
-<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/2.2.0/topojson.js"></script>
+<!-- <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script> -->
 
 <script src='_script.js'></script>
 
